@startuml work2

interface Sorter{
    load();
    sortStep();
}

interface Position{
    less();
}

interface Element{
    print();
}

class Container{
    positions;
    
    begin();
    end();
    indexOf();
    getPositions();
}

class Controler{
    monsters;
    method;

    getlog();
}

Container --* Controler
Sorter    --* Controler 


@enduml